# imbibe

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  build.rs  rustfmt.toml
crates/example-tarpc-cli-client/: Cargo.toml  README.md
crates/example-tarpc-cli-client/src/: main.rs
crates/imbibe-domain/: Cargo.toml  README.md
crates/imbibe-domain/src/: block.rs  lib.rs  tx.rs
crates/imbibe-indexer/: Cargo.toml  README.md
crates/imbibe-indexer/src/: backfill.rs  error.rs  lib.rs  live.rs
crates/imbibe-macros/: Cargo.toml  README.md
crates/imbibe-macros/src/: lib.rs
crates/imbibe-persistence/: Cargo.toml  README.md
crates/imbibe-persistence/migrations/2025-01-01-000000_create_block/: up.sql
crates/imbibe-persistence/migrations/2025-01-01-000001_create_tx/: down.sql  up.sql
crates/imbibe-persistence/src/: lib.rs  pool.rs  record.rs  schema.rs  store.rs
crates/imbibe-persistence/src/record/: error.rs  insert.rs  select.rs
crates/imbibe-persistence/src/store/: database.rs  error.rs
crates/imbibe-protos/: Cargo.toml  README.md  build.rs
crates/imbibe-protos/src/: error.rs  lib.rs
crates/imbibe-querier/: Cargo.toml  README.md
crates/imbibe-querier/src/: error.rs  lib.rs  server.rs  tarpc.rs
crates/imbibe-querier/src/tarpc/: error.rs  server.rs
crates/imbibe-telemetry/: Cargo.toml  README.md
crates/imbibe-telemetry/src/: error.rs  lib.rs
crates/imbibed/: Cargo.toml  README.md
crates/imbibed/src/: base_config.ron  config.rs  indexer.rs  lib.rs  main.rs  tarpc_querier.rs
migrations/2025-04-10-212857_block/: down.sql  up.sql
migrations/2025-04-27-152101_tx/: down.sql  up.sql
proto/: buf.gen.yaml  buf.yaml
proto/elder/crypto/: import_etchsecp256k1.proto
proto/elder/crypto/eldersecp256k1/: keys.proto
proto/elder/feetoken/: genesis.proto  params.proto  query.proto  tx.proto
proto/elder/feetoken/module/: module.proto
proto/elder/registration/: genesis.proto  params.proto  query.proto  roll.proto  tx.proto
proto/elder/registration/module/: module.proto
proto/elder/router/: genesis.proto  params.proto  query.proto  roll_txs.proto  tx.proto
proto/elder/router/module/: module.proto
src/: config.rs  domain.rs  indexer.rs  lib.rs  main.rs  persistence.rs  telemetry.rs  types.rs
src/domain/: block.rs  tx.rs
src/indexer/: historical.rs  live.rs
src/persistence/: record.rs  schema.rs  store.rs
src/persistence/record/: insert.rs
