[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/labcycle/imbibe"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "symbols"

[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.dependencies]
imbibe-domain = { path = "./crates/imbibe-domain" }
imbibe-macros = { path = "./crates/imbibe-macros" }
imbibe-persistence = { path = "./crates/imbibe-persistence" }

bon = "3.5"
bytes = "1"
cosmrs = "0.22"
futures = "0.3"
jiff = "0.2"
serde = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
