[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/labcycle/imbibe"
license = "Apache-2.0"
publish = true

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "symbols"

[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.dependencies]
imbibe-domain = { version = "0.0.1", path = "./crates/imbibe-domain" }
imbibe-indexer = { version = "0.0.1", path = "./crates/imbibe-indexer" }
imbibe-macros = { version = "0.0.1", path = "./crates/imbibe-macros" }
imbibe-persistence = { version = "0.0.1", path = "./crates/imbibe-persistence" }
imbibe-protos = { version = "0.0.1", path = "./crates/imbibe-protos" }
imbibe-querier = { version = "0.0.1", path = "./crates/imbibe-querier" }
imbibe-telemetry = { version = "0.0.1", path = "./crates/imbibe-telemetry" }

bon = "3.5"
bytes = "1"
cosmrs = "0.22"
futures = "0.3"
jiff = "0.2"
serde = "1"
tarpc = "0.36"
thiserror = "2"
tokio = "1"
tracing = "0.1"
