[package]
name = "imbibe-domain"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "jiff/serde",
]

[dependencies]
bon = { workspace = true }
bytes = { workspace = true }
cosmrs = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
