[package]
name = "imbibe-domain"
version.workspace = true
edition.workspace = true
description = "holds the types related to Block and Tx used throughrout imbibe"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "jiff/serde",
]

[dependencies]
bon = { workspace = true }
bytes = { workspace = true }
const-hex = "1.14"
cosmrs = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
