[package]
name = "imbibe-macros"
version = "0.0.1"
edition.workspace = true
description = "contains the proc macros used by imbibe components"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2" }
quote = "1"
