[package]
name = "imbibe-querier"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
tarpc = [
  "dep:serde",
  "dep:tarpc",
  "dep:tokio",
  "imbibe-domain/serde",
]

[dependencies]
bon = { workspace = true }
imbibe-domain = { workspace = true }
imbibe-persistence = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
tarpc = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }
tracing = { workspace = true }

