[package]
name = "imbibe-querier"
version.workspace = true
edition.workspace = true
description = "provides Querier that holds a database connection pool, and provides methods to perform various read operations on the database for imbibe"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
server = ["imbibe-persistence/database"]
tarpc = [
  "dep:serde",
  "dep:tarpc",
  "dep:tokio",
  "imbibe-domain/serde",
]

[dependencies]
bon = { workspace = true }
imbibe-domain = { workspace = true }
imbibe-persistence = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
tarpc = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }
tracing = { workspace = true }

