[package]
name = "imbibe-telemetry"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

