[package]
name = "imbibe-telemetry"
version = "0.0.1"
edition.workspace = true
description = "contains helper methods for open-telemetry support for imbibe"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

