[package]
name = "imbibed"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
bundled = ["imbibe-persistence/bundled"]
custom-protos = ["imbibe-indexer/custom-protos"]
disable-telemetry = ["disable-tracing"]
disable-tracing = [
  "tracing/max_level_off",
  "tracing/release_max_level_off",
]
ethsecp256k1 = ["imbibe-indexer/ethsecp256k1"]

[dependencies]
anyhow = "1"
config = { version = "0.15", default-features = false, features = ["ron"] }
imbibe-indexer = { workspace = true }
imbibe-persistence = { workspace = true }
imbibe-telemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
